# ParameterAdapt

./: LICENSE  Rough_Paper.py  animate.py  basis_change_analysis.py  main.py  main.py.lprof  non_intrusive_rom_functions.py  non_linear_terms.py  plot.py  plot_errors.py  plot_errors10.py  plot_errors11.py  plot_errors12.1.py  plot_errors12.py  plot_errors13.1.py  plot_errors2.py  plot_errors3.py  plot_errors4.py  plot_errors5.py  plot_errors6.py  plot_errors7.py  plot_errors8.py  plot_errors9.py  plot_errors_short.py  plot_errors_shorter.py  profile.out  pyproject.toml  requirements.txt  rom_functions.py  romify.py  solver_functions.py  time_integrator_functions.py  ui_solver_bridge.py  visualization_functions.py  working_notebook.ipynb
.github/workflows/: test.yml
boundary_condition/: bc_func.py
docs/: README.md  paper.md  ref.bib
driver/: run.py
examples/1D_RDE/: Fucking_Cantera.npy  Fucking_Cantera2.npy  IC_ramp_PR_2_1000.npy  IC_ramp_PR_2_200.npy  IC_ramp_PR_2_2000.npy  IC_ramp_PR_40_1000_new.npy  IC_ramp_PR_40_500.npy  IC_smooth_start.npy  (+11 more)
misc_tools/: CJ_Velocity_Calculator.ipynb  basis_change_analysis.py  basis_generator.py  batch_wrapper.py  plot.py  requirements.txt  working_notebook.ipynb
physics/: Ideal_Air.py  Reacting_Flow.py  Single_Step_Reacting_Flow.py
rom/: basis_func.py  sampling_func.py
solver/: AROM.py  FOM.py  KAROM.py  NLROM.py  PROM.py  QROM.py  ROM.py  SAROM.py
tests/: test_physics.py  test_rom.py  test_time_integration.py  test_utils.py
time_integration/: BDF.py  FDF.py
utils/: init_func.py  input_read_func.py  reshape_func.py
(+98 files in other folders)
